--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "express": "~4.15.2",
     "morgan": "~1.8.1",
     "serve-favicon": "~2.4.2"
+  },
+  "devDependencies": {
+    "typescript": "^2.3.4"
   }
 }
