--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "ejs": "~2.5.6",
     "express": "~4.15.2",
     "morgan": "~1.8.1",
-    "node-querybuilder": "^0.15.0",
+    "mysql2": "^1.3.5",
     "serve-favicon": "~2.4.2"
   }
 }
