--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "debug": "~2.6.3",
     "ejs": "~2.5.6",
     "express": "~4.15.2",
+    "html-purify": "^1.1.0",
     "morgan": "~1.8.1",
     "mysql2": "^1.3.5",
     "serve-favicon": "~2.4.2"
