--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^1.0.2",
     "bluebird": "^3.5.0",
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
+    "cookies": "^0.7.0",
     "debug": "~2.6.3",
     "ejs": "~2.5.6",
     "express": "~4.15.2",
     "html-purify": "^1.1.0",
+    "jwt-simple": "^0.5.1",
     "morgan": "~1.8.1",
     "mysql2": "^1.3.5",
+    "randomstring": "^1.1.5",
     "serve-favicon": "~2.4.2"
   }
 }
