--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jwt-simple": "^0.5.1",
     "morgan": "~1.8.1",
     "mysql2": "^1.3.5",
+    "nodemailer": "^4.0.1",
     "randomstring": "^1.1.5",
     "serve-favicon": "~2.4.2"
   }
