--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "~4.15.2",
     "html-purify": "^1.1.0",
     "jwt-simple": "^0.5.1",
+    "mkdirp-promise": "^5.0.1",
     "morgan": "~1.8.1",
     "mysql2": "^1.3.5",
     "nodemailer": "^4.0.1",
