--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "debug": "~2.6.3",
     "ejs": "~2.5.6",
     "express": "~4.15.2",
+    "fs-extra": "^3.0.1",
     "html-purify": "^1.1.0",
     "jwt-simple": "^0.5.1",
-    "mkdirp-promise": "^5.0.1",
     "morgan": "~1.8.1",
     "mysql2": "^1.3.5",
     "nodemailer": "^4.0.1",
