--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,8 @@
     "react-dom": "^15.6.1",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
-    "react-scripts": "1.0.10"
+    "react-scripts": "1.0.10",
+    "tinymce": "^4.6.4"
   },
   "scripts": {
     "start": "react-scripts start",
