--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,15 +1,19 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "TABC EOTS",
+  "name": "TABC Eye of the Storm Newspaper",
+  "description": "Latest news from Torah Academy of Bergen County - By students, for students",
+  "dir": "ltr",
+  "lang": "en-US",
+  "scope": "/",
   "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "192x192",
-      "type": "image/png"
-    }
+      {
+          "src": "/images/favicons/android-chrome-96x96.png",
+          "sizes": "96x96",
+          "type": "image/png"
+      }
   ],
   "start_url": "./index.html",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "background_color": "#fdf7ef"
 }
