--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "install-all": "npm --prefix ./ install && npm --prefix ./client/ install"
   },
   "dependencies": {
     "bcrypt": "^1.0.2",
