--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
+    "start-all": "npm start | npm --prefix ./client/ start",
     "install-all": "npm --prefix ./ install && npm --prefix ./client/ install"
   },
   "dependencies": {
