--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "fs-extra": "^3.0.1",
     "html-purify": "^1.1.0",
     "jwt-simple": "^0.5.1",
+    "moment": "^2.18.1",
     "morgan": "~1.8.1",
     "mysql2": "^1.3.5",
     "nodemailer": "^4.0.1",
