Changed file structure to make backend and client completely separate

--- a/backend/package.json
+++ b/backend/package.json
@@ -3,9 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "start-all": "npm start | npm --prefix ./client/ start",
-    "install-all": "npm --prefix ./ install && npm --prefix ./client/ install"
+    "start": "node ./bin/www"
   },
   "dependencies": {
     "bcrypt": "^1.0.2",
