--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,7 @@
     "tinymce": "^4.6.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3001 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
