--- a/backend/package.json
+++ b/backend/package.json
@@ -7,20 +7,27 @@
   },
   "dependencies": {
     "bcrypt": "^1.0.2",
-    "body-parser": "~1.17.1",
-    "cookie-parser": "~1.4.3",
+    "body-parser": "^1.17.2",
+    "cookie-parser": "^1.4.3",
     "cookies": "^0.7.0",
     "debug": "~2.6.3",
     "ejs": "~2.5.6",
-    "express": "~4.15.2",
+    "express": "^4.15.4",
     "fs-extra": "^3.0.1",
     "html-purify": "^1.1.0",
     "jwt-simple": "^0.5.1",
     "moment": "^2.18.1",
-    "morgan": "~1.8.1",
+    "morgan": "^1.8.2",
     "mysql2": "^1.3.5",
     "nodemailer": "^4.0.1",
     "randomstring": "^1.1.5",
     "serve-favicon": "~2.4.2"
+  },
+  "devDependencies": {
+    "@types/body-parser": "^1.16.4",
+    "@types/cookie-parser": "^1.4.0",
+    "@types/express": "^4.0.36",
+    "@types/jwt-simple": "^0.5.33",
+    "@types/morgan": "^1.7.32"
   }
 }
