--- a/backend/package.json
+++ b/backend/package.json
@@ -14,20 +14,29 @@
     "ejs": "~2.5.6",
     "express": "^4.15.4",
     "fs-extra": "^3.0.1",
+    "graphql": "^0.10.5",
     "html-purify": "^1.1.0",
     "jwt-simple": "^0.5.1",
     "moment": "^2.18.1",
     "morgan": "^1.8.2",
-    "mysql2": "^1.3.5",
+    "mysql2": "^1.4.0",
     "nodemailer": "^4.0.1",
     "randomstring": "^1.1.5",
+    "sequelize": "^4.4.2",
     "serve-favicon": "~2.4.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^1.0.0",
     "@types/body-parser": "^1.16.4",
     "@types/cookie-parser": "^1.4.0",
+    "@types/cookies": "^0.6.1",
     "@types/express": "^4.0.36",
+    "@types/fs-extra": "^4.0.0",
+    "@types/graphql": "^0.10.2",
     "@types/jwt-simple": "^0.5.33",
-    "@types/morgan": "^1.7.32"
+    "@types/morgan": "^1.7.32",
+    "@types/nodemailer": "^3.1.1",
+    "@types/randomstring": "^1.1.6",
+    "@types/sequelize": "^4.0.67"
   }
 }
