--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "array-flatten": "^2.1.1",
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.2",
     "cookie-parser": "^1.4.3",
@@ -13,15 +14,19 @@
     "debug": "~2.6.3",
     "ejs": "~2.5.6",
     "express": "^4.15.4",
+    "express-graphql": "^0.6.7",
     "fs-extra": "^3.0.1",
     "graphql": "^0.10.5",
     "html-purify": "^1.1.0",
+    "iconv-lite": "^0.4.18",
     "jwt-simple": "^0.5.1",
+    "mime": "^1.3.6",
     "moment": "^2.18.1",
     "morgan": "^1.8.2",
     "mysql2": "^1.4.0",
     "nodemailer": "^4.0.1",
     "randomstring": "^1.1.5",
+    "sanitize-html": "^1.14.1",
     "sequelize": "^4.4.2",
     "serve-favicon": "~2.4.2"
   },
@@ -31,12 +36,14 @@
     "@types/cookie-parser": "^1.4.0",
     "@types/cookies": "^0.6.1",
     "@types/express": "^4.0.36",
+    "@types/express-graphql": "0.0.33",
     "@types/fs-extra": "^4.0.0",
     "@types/graphql": "^0.10.2",
     "@types/jwt-simple": "^0.5.33",
     "@types/morgan": "^1.7.32",
     "@types/nodemailer": "^3.1.1",
     "@types/randomstring": "^1.1.6",
+    "@types/sanitize-html": "^1.13.31",
     "@types/sequelize": "^4.0.67"
   }
 }
