--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,9 @@
     "@types/node": "^8.0.19",
     "@types/react": "^16.0.0",
     "@types/react-dom": "^15.5.2",
+    "apollo-client": "^1.9.0",
     "react": "^15.6.1",
+    "react-apollo": "^1.4.11",
     "react-dom": "^15.6.1",
     "react-router": "^4.1.1",
     "react-scripts-ts": "2.5.0",
