--- a/client/package.json
+++ b/client/package.json
@@ -16,10 +16,18 @@
     "tinymce": "^4.6.5"
   },
   "devDependencies": {
+    "@types/enzyme": "^2.8.5",
+    "@types/history": "^4.6.0",
     "@types/react-router": "^4.0.14",
     "@types/react-router-dom": "^4.0.7",
+    "@types/react-test-renderer": "^15.5.2",
+    "@types/sinon": "^2.3.3",
     "@types/tinymce": "^4.5.10",
+    "enzyme": "^2.9.1",
+    "react-dom": "^15.6.1",
     "react-router-dom": "^4.1.2",
+    "react-test-renderer": "^15.6.1",
+    "sinon": "^3.2.0",
     "typescript": "^2.4.2"
   },
   "scripts": {
