--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "body-parser": "^1.17.2",
     "cookie-parser": "^1.4.3",
     "cookies": "^0.7.0",
+    "dataloader": "^1.3.0",
     "debug": "~2.6.3",
     "ejs": "~2.5.6",
     "express": "^4.15.4",
