--- a/client/package.json
+++ b/client/package.json
@@ -29,12 +29,14 @@
     "react-router-dom": "^4.1.2",
     "react-test-renderer": "^15.6.1",
     "sinon": "^3.2.0",
+    "typedoc": "^0.8.0",
     "typescript": "^2.4.2"
   },
   "scripts": {
     "start": "react-scripts-ts start",
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
-    "eject": "react-scripts-ts eject"
+    "eject": "react-scripts-ts eject",
+    "docs": "rm -rf ./docs/; typedoc --mode modules --out ./docs/ ./src/"
   }
 }
