--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^7.2.3",
     "array-flatten": "^2.1.1",
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.2",
@@ -20,6 +21,7 @@
     "graphql": "^0.10.5",
     "html-purify": "^1.1.0",
     "iconv-lite": "^0.4.18",
+    "jsonwebtoken": "^7.4.3",
     "jwt-simple": "^0.5.1",
     "mime": "^1.3.6",
     "moment": "^2.18.1",
