--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@types/react": "^16.0.0",
     "@types/react-dom": "^15.5.2",
     "apollo-client": "^1.9.0",
+    "graphql-tools": "^1.2.1",
     "react": "^15.6.1",
     "react-apollo": "^1.4.11",
     "react-dom": "^15.6.1",
