--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "express-graphql": "^0.6.7",
     "fs-extra": "^3.0.1",
     "graphql": "^0.10.5",
+    "helmet": "^3.8.1",
     "html-purify": "^1.1.0",
     "iconv-lite": "^0.4.18",
     "jsonwebtoken": "^7.4.3",
@@ -42,6 +43,7 @@
     "@types/express-graphql": "0.0.33",
     "@types/fs-extra": "^4.0.1",
     "@types/graphql": "^0.10.2",
+    "@types/helmet": "0.0.36",
     "@types/jwt-simple": "^0.5.33",
     "@types/morgan": "^1.7.32",
     "@types/nodemailer": "^3.1.2",
