--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "cookies": "^0.7.1",
     "dataloader": "^1.3.0",
     "debug": "~2.6.3",
+    "dotenv-safe": "^4.0.4",
     "ejs": "~2.5.6",
     "express": "^4.15.4",
     "express-graphql": "^0.6.7",
@@ -39,8 +40,10 @@
     "@types/body-parser": "^1.16.4",
     "@types/cookie-parser": "^1.4.0",
     "@types/cookies": "^0.6.1",
+    "@types/dotenv-safe": "^4.0.0",
     "@types/express": "^4.0.36",
     "@types/express-graphql": "0.0.33",
+    "@types/faker": "^4.1.1",
     "@types/fs-extra": "^4.0.1",
     "@types/graphql": "^0.10.2",
     "@types/helmet": "0.0.36",
@@ -49,6 +52,7 @@
     "@types/nodemailer": "^3.1.2",
     "@types/randomstring": "^1.1.6",
     "@types/sanitize-html": "^1.13.31",
-    "@types/sequelize": "^4.0.67"
+    "@types/sequelize": "^4.0.67",
+    "faker": "^4.1.0"
   }
 }
