--- a/backend/package.json
+++ b/backend/package.json
@@ -3,13 +3,16 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "tsc; clear; mocha dist/tests/**/*.test.js"
   },
   "dependencies": {
+    "@types/chai-http": "^3.0.3",
     "@types/jsonwebtoken": "^7.2.3",
     "array-flatten": "^2.1.1",
     "bcrypt": "^1.0.3",
     "body-parser": "^1.17.2",
+    "chai-http": "^3.0.0",
     "cookie-parser": "^1.4.3",
     "cookies": "^0.7.1",
     "dataloader": "^1.3.0",
@@ -20,6 +23,7 @@
     "express-graphql": "^0.6.7",
     "fs-extra": "^3.0.1",
     "graphql": "^0.10.5",
+    "graphql-tag": "^2.4.2",
     "helmet": "^3.8.1",
     "html-purify": "^1.1.0",
     "iconv-lite": "^0.4.18",
@@ -38,6 +42,7 @@
   "devDependencies": {
     "@types/bcrypt": "^1.0.0",
     "@types/body-parser": "^1.16.4",
+    "@types/chai": "^4.0.4",
     "@types/cookie-parser": "^1.4.0",
     "@types/cookies": "^0.6.1",
     "@types/dotenv-safe": "^4.0.0",
@@ -48,11 +53,14 @@
     "@types/graphql": "^0.10.2",
     "@types/helmet": "0.0.36",
     "@types/jwt-simple": "^0.5.33",
+    "@types/mocha": "^2.2.43",
     "@types/morgan": "^1.7.32",
     "@types/nodemailer": "^3.1.2",
     "@types/randomstring": "^1.1.6",
     "@types/sanitize-html": "^1.13.31",
     "@types/sequelize": "^4.0.67",
-    "faker": "^4.1.0"
+    "chai": "^4.1.2",
+    "faker": "^4.1.0",
+    "mocha": "^3.5.3"
   }
 }
