--- a/server/composer.json
+++ b/server/composer.json
@@ -1,6 +1,9 @@
 {
     "name": "dovidm/eyestorm-server",
-    "require": {},
+    "require": {
+        "fzaninotto/faker": "^1.7",
+        "webonyx/graphql-php": "^0.10.2"
+    },
     "require-dev": {
         "phpunit/phpunit": "^6.2"
     }
