--- a/server/composer.json
+++ b/server/composer.json
@@ -1,10 +1,17 @@
 {
     "name": "dovidm/eyestorm-server",
     "require": {
-        "fzaninotto/faker": "^1.7",
-        "webonyx/graphql-php": "^0.10.2"
+        "youshido/graphql": "^1.5",
+        "vlucas/phpdotenv": "^2.4"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.2"
-    }
+        "phpunit/phpunit": "^6.2",
+        "fzaninotto/faker": "^1.7"
+    },
+    "autoload": {
+		"classmap": [
+			"src/db/connection.php",
+			"src/schema/types.php"
+		]
+	}
 }
