--- a/server/composer.json
+++ b/server/composer.json
@@ -2,7 +2,8 @@
     "name": "dovidm/eyestorm-server",
     "require": {
         "youshido/graphql": "^1.5",
-        "vlucas/phpdotenv": "^2.4"
+        "vlucas/phpdotenv": "^2.4",
+        "lcobucci/jwt": "^3.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.2",
@@ -10,8 +11,7 @@
     },
     "autoload": {
 		"classmap": [
-			"src/db/connection.php",
-			"src/schema/types.php"
+			"src/db/connection.php"
 		]
 	}
 }
