Added Guard class for authorization

--- a/server/composer.json
+++ b/server/composer.json
@@ -15,7 +15,8 @@
 			"src/db/connection.php",
             "src/test/TestDatabase.php",
             "src/test/HelpTests.php",
-            "src/helpers/Jwt.php"
+            "src/helpers/Jwt.php",
+            "src/helpers/Guard.php"
 		]
 	}
 }
