--- a/server/composer.json
+++ b/server/composer.json
@@ -4,7 +4,8 @@
         "youshido/graphql": "^1.5",
         "vlucas/phpdotenv": "^2.4",
         "lcobucci/jwt": "^3.2",
-        "ezyang/htmlpurifier": "dev-master"
+        "ezyang/htmlpurifier": "dev-master",
+        "phpmailer/phpmailer": "^6.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.2",
@@ -16,7 +17,8 @@
             "src/test/TestDatabase.php",
             "src/test/HelpTests.php",
             "src/helpers/Jwt.php",
-            "src/helpers/Guard.php"
+            "src/helpers/Guard.php",
+            "src/helpers/Validate.php"
 		]
 	}
 }
