--- a/server/.env.example
+++ b/server/.env.example
@@ -9,7 +9,11 @@ EMAIL_PASS=
 EMAIL_HOST=
 EMAIL_PORT=
 EMAIL_NAME=
+USER_EMAIL=
 
 JWT_SECRET=
 
-EMAIL_HOST=
+USER_EMAIL_HOST=
+
+URL_LENGTH=
+test=
