--- a/server/.env.example
+++ b/server/.env.example
@@ -16,4 +16,7 @@ JWT_SECRET=
 USER_EMAIL_HOST=
 
 URL_LENGTH=
+
+# make SURE you know what you're doing when testing. If this is 1, it WILL overwrite all data in the database
+# when you run tests
 test=
