--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react": "^15.6.1",
     "react-apollo": "^1.4.11",
     "react-dom": "^15.6.1",
+    "react-helmet": "^5.2.0",
     "react-router": "^4.1.1",
     "react-scripts-ts": "2.5.0",
     "tinymce": "^4.6.5"
@@ -19,6 +20,7 @@
   "devDependencies": {
     "@types/enzyme": "^2.8.5",
     "@types/history": "^4.6.0",
+    "@types/react-helmet": "^5.0.3",
     "@types/react-router": "^4.0.14",
     "@types/react-router-dom": "^4.0.7",
     "@types/react-test-renderer": "^15.5.2",
