Updated all outdated packages in package.json

--- a/client/package.json
+++ b/client/package.json
@@ -3,35 +3,42 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "^20.0.6",
+    "@types/jest": "^21.1.8",
     "@types/node": "^8.0.19",
     "@types/react": "^16.0.0",
-    "@types/react-dom": "^15.5.2",
-    "apollo-client": "^1.9.0",
-    "graphql-tools": "^1.2.1",
-    "react": "^15.6.1",
-    "react-apollo": "^1.4.11",
-    "react-dom": "^15.6.1",
+    "@types/react-dom": "^16.0.3",
+    "apollo-cache-inmemory": "^1.1.1",
+    "apollo-client": "^2.0.3",
+    "apollo-link-http": "^1.2.0",
+    "graphql": "^0.11.3",
+    "graphql-tag": "^2.5.0",
+    "graphql-tools": "^2.9.0",
+    "react": "^16.1.1",
+    "react-apollo": "^2.0.1",
+    "react-dom": "^16.1.1",
     "react-helmet": "^5.2.0",
     "react-router": "^4.1.1",
-    "react-scripts-ts": "2.5.0",
+    "react-scripts-ts": "2.8.0",
     "tinymce": "^4.6.5"
   },
   "devDependencies": {
-    "@types/enzyme": "^2.8.5",
+    "@types/enzyme": "^3.1.5",
+    "@types/enzyme-adapter-react-16": "^1.0.1",
+    "@types/graphql": "^0.11.6",
     "@types/history": "^4.6.0",
     "@types/react-helmet": "^5.0.3",
     "@types/react-router": "^4.0.14",
     "@types/react-router-dom": "^4.0.7",
-    "@types/react-test-renderer": "^15.5.2",
-    "@types/sinon": "^2.3.3",
+    "@types/react-test-renderer": "^16.0.0",
+    "@types/sinon": "^4.0.0",
     "@types/tinymce": "^4.5.10",
     "casual": "^1.5.17",
-    "enzyme": "^2.9.1",
+    "enzyme": "^3.2.0",
+    "enzyme-adapter-react-16": "^1.1.0",
     "react-router-dom": "^4.1.2",
-    "react-test-renderer": "^15.6.1",
-    "sinon": "^3.2.0",
-    "typedoc": "^0.8.0",
+    "react-test-renderer": "^16.1.1",
+    "sinon": "^4.1.2",
+    "typedoc": "^0.9.0",
     "typescript": "^2.4.2"
   },
   "scripts": {
