--- a/client/package.json
+++ b/client/package.json
@@ -8,24 +8,24 @@
     "apollo-link-http": "^1.2.0",
     "graphql": "^0.11.3",
     "graphql-tag": "^2.5.0",
-    "graphql-tools": "^2.9.0",
+    "graphql-tools": "^3.0.4",
     "react": "^16.2.0",
-    "react-apollo": "^2.0.1",
+    "react-apollo": "^2.1.8",
     "react-dom": "^16.2.0",
     "react-helmet": "^5.2.0",
     "react-router": "^4.1.1",
-    "react-scripts-ts": "2.8.0",
+    "react-scripts-ts": "2.16.0",
     "tinymce": "^4.6.5"
   },
   "devDependencies": {
-    "@types/jest": "^21.1.8",
-    "@types/node": "^8.0.19",
-    "@types/react": "^16.0.0",
-    "@types/react-dom": "^16.0.3",
     "@types/enzyme": "^3.1.5",
     "@types/enzyme-adapter-react-16": "^1.0.1",
-    "@types/graphql": "^0.11.7",
-    "@types/history": "^4.6.0",
+    "@types/graphql": "^0.13.1",
+    "@types/history": "^4.6.2",
+    "@types/jest": "^23.1.3",
+    "@types/node": "^10.5.0",
+    "@types/react": "^16.4.4",
+    "@types/react-dom": "^16.0.3",
     "@types/react-helmet": "^5.0.3",
     "@types/react-router": "^4.0.14",
     "@types/react-router-dom": "^4.0.7",
@@ -42,7 +42,7 @@
     "typescript": "^2.6.2"
   },
   "scripts": {
-    "start": "react-scripts-ts start",
+    "start": "BROWSER=none react-scripts-ts start",
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject",
