Got docker working

--- a/server/.env.example
+++ b/server/.env.example
@@ -13,14 +13,16 @@ USER_EMAIL_HOST=
 
 URL_LENGTH=
 
-testing=
-
 JWT_SECRET=
 
 USER_EMAIL_HOST=
 
 URL_LENGTH=
 
+# different from `test` in that it just turns on error messages
+dev=1
+
 # make SURE you know what you're doing when testing. If this is 1, it WILL overwrite all data in the database
 # when you run tests
 test=
+
