--- a/client/package.json
+++ b/client/package.json
@@ -8,26 +8,26 @@
     "apollo-link-http": "^1.2.0",
     "graphql": "^0.11.3",
     "graphql-tag": "^2.5.0",
-    "graphql-tools": "^3.0.4",
+    "graphql-tools": "^3.0.5",
     "react": "^16.2.0",
-    "react-apollo": "^2.1.8",
+    "react-apollo": "^2.1.9",
     "react-dom": "^16.2.0",
     "react-helmet": "^5.2.0",
     "react-router": "^4.1.1",
     "react-scripts-ts": "2.16.0",
-    "tinymce": "^4.6.5"
+    "tinymce": "^4.8.0"
   },
   "devDependencies": {
     "@types/enzyme": "^3.1.5",
     "@types/enzyme-adapter-react-16": "^1.0.1",
-    "@types/graphql": "^0.13.1",
+    "@types/graphql": "^0.13.3",
     "@types/history": "^4.6.2",
-    "@types/jest": "^23.1.3",
-    "@types/node": "^10.5.0",
-    "@types/react": "^16.4.4",
+    "@types/jest": "^23.1.6",
+    "@types/node": "^10.5.2",
+    "@types/react": "^16.4.6",
     "@types/react-dom": "^16.0.3",
     "@types/react-helmet": "^5.0.3",
-    "@types/react-router": "^4.0.14",
+    "@types/react-router": "^4.0.28",
     "@types/react-router-dom": "^4.0.7",
     "@types/react-test-renderer": "^16.0.0",
     "@types/sinon": "^4.0.0",
@@ -39,7 +39,8 @@
     "react-test-renderer": "^16.1.1",
     "sinon": "^4.1.2",
     "typedoc": "^0.9.0",
-    "typescript": "^2.6.2"
+    "typescript": "^2.6.2",
+    "waait": "^1.0.2"
   },
   "scripts": {
     "start": "BROWSER=none react-scripts-ts start",
