Set logo through env var

--- a/client/.env.example
+++ b/client/.env.example
@@ -1,1 +1,2 @@
 REACT_APP_SERVER_URL=http://localhost # wherever the server is located, where SERVER_URL/graphql is
+REACT_APP_LOGO_PATH=/images/logo.png # either a file path under public/ (written as an absolute path) or a url to an image
