logo img is env var

--- a/client/.env.example
+++ b/client/.env.example
@@ -1,3 +1,4 @@
 REACT_APP_SERVER_URL=http://localhost # wherever the server is located, where SERVER_URL/graphql is
 REACT_APP_LOGO_PATH=/images/logo.png # either a file path under public/ (written as an absolute path) or a url to an image
 REACT_APP_TAGLINE="A Wonderful Tagline"
+REACT_APP_FULL_NAME="Example School Newspaper"
