--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ services:
       - '/usr/src/app/node_modules'
     networks:
       - newspaper_net
+    env_file:
+      - client/.env
     environment:
       - REACT_APP_SERVER_URL=localhost:8080
     links:
